--- a/html/index.html
+++ b/html/index.html
@@ -34,7 +34,7 @@
   <div class="container">
     <div class="row">
       <div class="one-half column" style="margin-top: 25%">
-        <h1 style="color:red"><b>Hello Kubernetes Fans How are you</b></h1>
+        <h1 style="color:red"><b>Hello Kubernetes Fans How are</b></h1>
         <img src="images/docker.png"
         <p>This page is served from a <strong>docker-swarm</strong> container running Nginx.</p>
       </div>
